# prodaflt-bots

./: .env.example  .gitignore  DEPLOY_CLOUD.md  DEPLOY_RENDER_FREE.md  Dockerfile  LAUNCH_GUIDE.md  Makefile  Procfile  README.md  README_CONFIG.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  fly.toml  prodaflt_unified_architecture.md  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt
alert-engine-code/: .env.example  README.md  __init__.py  database.py  models.py  notifier.py  requirements.txt  tests.py
components/soul-prompts-text/: .env.example  README.md  requirements.txt
components/soul-prompts-text/prompts/: creative_soul.md  data_analyst_soul.md  meta_master_soul.md  researcher_soul.md  router_soul.md  tech_lead_soul.md
components/soul-prompts-text/src/: __init__.py  api.py  db.py  loader.py
components/soul-prompts-text/tests/: test_loader.py
config/: __init__.py  database.py  logging_config.py
content-researcher-pipeline/: .env.example  README.md  db.py  requirements.txt  scorer.py  scraper.py  tasks.py  video_analyzer.py
content-researcher-pipeline/skills/: content-researcher.skill
fastapi-endpoints/: .env.example  README.md  requirements.txt
fastapi-endpoints/app/: __init__.py  database.py
fastapi-endpoints/app/routers/: links.py  stats.py  users.py
logs/: .gitkeep
migrations/: 001_prodaflt_tables.sql  002_agents_table.sql
parser-bot-code/: .env.example  Dockerfile  README.md  bot.py  config.py  database.py  requirements.txt
prodaflt/api/app/: dependencies.py  main.py  models.py
prodaflt/api/app/routers/: __init__.py  alerts.py  campaign_metrics.py  content_analysis.py  patterns.py  tz_specs.py
prodaflt/bots/alert_engine/: config.py  engine.py  main.py
prodaflt/bots/parser/: bot.py  config.py  database.py  link_parser.py
prodaflt/config/: settings.py
prodaflt/models/: __init__.py
prodaflt/prompts/: compliance_soul.md
prodaflt/scripts/: seed_database.py
prodaflt/skills/content_researcher/: __init__.py  classifier.py  config.py  pipeline.py
scripts/: health_check.py
