[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prodaflt"
version = "0.1.0"
description = "PRODAFLT — Gambling Creative Production System"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Mercurio Group", email = "tech@prodaflt.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "openai>=1.30.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "easyocr>=1.7.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "rich>=13.7.0",
]

[project.scripts]
prodaflt-api = "api.main:main"
prodaflt-bot = "bots.parser:main"
prodaflt-worker = "tasks.celery_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "api*", "bots*", "tasks*", "models*"]
exclude = ["tests*", "scripts*", "migrations*"]

# ============================================================
# BLACK — Code formatter
# ============================================================
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | migrations
  | \.venv
  | venv
  | __pycache__
)/
'''

# ============================================================
# RUFF — Linter
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long → handled by black

[tool.ruff.pydocstyle]
convention = "google"

# ============================================================
# MYPY — Type checker
# ============================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "easyocr.*",
    "telegram.*",
    "celery.*",
    "redis.*",
]
ignore_missing_imports = true

# ============================================================
# PYTEST — Test runner
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================
# COVERAGE
# ============================================================
[tool.coverage.run]
source = ["config", "api", "bots", "tasks", "models"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
